# MultiCameraStreamer

./: .gitignore  CMakeLists.txt  README.md  auto.crt  auto.key
config/: mediamtx.yml  streams.json
include/: application.h  camera.h  camera_pipeline.h  config_manager.h  pipeline_manager.h
src/: application.c  camera.c  camera_pipeline.c  config_manager.c  main.c  pipeline_manager.c
